--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,8 +19,17 @@
   }
 }
 
+@font-face {
+  font-family: 'Aeonik';
+  /* Replace with your font's name */
+  src: url('/plantyx/fonts/AeonikTRIAL-Light.otf') format('opentype');
+  /* Replace with your OTF file's name */
+  font-style: normal;
+}
+
+html,
 body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  min-width: 0;
+  width: 100%;
+  margin: 0;
 }
